--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <!-- 電子郵件 -->
             <div class="input-group">
                 <label for="email" class="input-label">電子郵件 Email  </label>              
-                <input type="email" id="email" placeholder="請輸入電子郵件 ⌨" class="input-field">
+                <input type="email" id="email" placeholder="請輸入電子郵件 " class="input-field">
             </div>
 
             <!-- 密碼 -->
             <div class="input-group">
                 <label for="password" class="input-label">密碼 Password </label>
-                <input type="password" id="password" placeholder="請輸入密碼 ⌨" class="input-field">
+                <input type="password" id="password" placeholder="請輸入密碼 " class="input-field">
             </div>
 
             <!-- 確認按鈕 -->
