--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登入畫面</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
 
@@ -31,13 +31,13 @@
             </div>
 
             <!-- 確認按鈕 -->
-            <button class="btn-confirm" onclick="window.location.href='main.html'">確認</button>
+            <button class="btn-confirm" onclick="login()">確認</button>
 
             <!-- 忘記密碼 -->
             <a href="forgot-password.html" class="forgot-password">忘記密碼?</a>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
